--- a/exercicios/ex012/index.html
+++ b/exercicios/ex012/index.html
@@ -9,7 +9,7 @@
     <h1>Inserindo vídeos hospedados localmente</h1>
     <p>Este vídeo está hospedado no meu próprio servidor</p>
 
-    <video width="500" poster="imagens/youtube-cover-1920-x-1080-background-q5cst7zddpgfjx1t.jpg" controls>
+    <video width="500" poster=https://images.pexels.com/photos/33140585/pexels-photo-33140585.jpeg controls>
         
         <source src="midia/meu video.mp4" type="video/mp4">
         <source src="midia/meu video m4v.mp4" type="video/mp4">
