--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th{
@@ -29,6 +30,12 @@
         thead, tfoot{
             background-color: rgb(88, 88, 88);
             color: white;
+        }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color:rgb(88, 88, 88);
         }
 
         tbody > tr:nth-child(2n){
